chore(i18n): more fix for fr translation

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -408,8 +408,8 @@
   "Disable all": "Désactiver tous les",
   "Discard": "Jeter",
   "Disconnect": "Déconnecter",
-  "Discuss partnership": "Discution à propos partenariat",
-  "Discuss recent purchases": "Discution à propos d’achats récents",
+  "Discuss partnership": "Discussion à propos partenariat",
+  "Discuss recent purchases": "Discussion à propos d’achats récents",
   "Dismiss": "Rejeter",
   "Display help links in the interface to help you (English only)": "Afficher des liens d’aide dans l’interface pour vous aider (en anglais uniquement)",
   "Distance": "Distance",
