--- a/lang/fr.json
+++ b/lang/fr.json
@@ -408,8 +408,8 @@
   "Disable all": "Désactiver tous les",
   "Discard": "Jeter",
   "Disconnect": "Déconnecter",
-  "Discuss partnership": "Discution à propos partenariat",
-  "Discuss recent purchases": "Discution à propos d’achats récents",
+  "Discuss partnership": "Discussion à propos partenariat",
+  "Discuss recent purchases": "Discussion à propos d’achats récents",
   "Dismiss": "Rejeter",
   "Display help links in the interface to help you (English only)": "Afficher des liens d’aide dans l’interface pour vous aider (en anglais uniquement)",
   "Distance": "Distance",
@@ -888,7 +888,6 @@
   "Record your mood": "Enregistrez votre humeur",
   "Recovery Code": "Code de récupération",
   "Regardless of where you are located in the world, have dates displayed in your own timezone.": "Quel que soit l’endroit où vous vous trouvez dans le monde, affichez les dates dans votre propre fuseau horaire.",
-  "Regards": "Cordialement",
   "Regards,": "Cordialement,",
   "Regenerate Recovery Codes": "Régénérer les codes de récupération",
   "Register": "Inscription",
@@ -1260,7 +1259,6 @@
   "Took the metro": "A pris le métro",
   "Too Many Requests": "Trop de requêtes",
   "To see if they need anything": "Pour voir s’ils ont besoin de quelque chose",
-  "To start, you need to create a vault.": "Pour commencer, vous devez créer un coffre.",
   "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Pour commencer, vous devez créer un coffre-fort. Un coffre-fort est un espace privé dans lequel vous pouvez stocker vos contacts.",
   "Total:": "Total :",
   "Total streaks": "Total des séries",
@@ -1339,7 +1337,7 @@
   "Version :version — commit [:short](:url).": "Version :version — commit [:short](:url).",
   "Via Telegram": "Par Telegram",
   "Video call": "Appel vidéo",
-  "View": "Afficher",
+  "View": "Vue",
   "View :name": "Voir :name",
   "View all": "Afficher tout",
   "View details": "Afficher les détails",
