feat: userless login and refactor Login page

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -659,8 +659,8 @@
   "Log In": "تسجيل الدخول",
   "Login": "تسجيل الدخول",
   "Login with:": "تسجيل الدخول مع:",
-  "Logout": "تسجيل الخروج",
   "Log Out": "تسجيل الخروج",
+  "Logout": "تسجيل الخروج",
   "Log Out Other Browser Sessions": "تسجيل الخروج من جلساتك على المتصفحات الأخرى",
   "Longest streak": "أطول أثر",
   "Loop Detected": "تم الكشف عن حلقة",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "تعد Open Street Maps بديلاً رائعًا للخصوصية، ولكنها تقدم تفاصيل أقل.",
   "Open Telegram to validate your identity": "افتح Telegram للتحقق من هويتك",
   "optional": "خياري",
+  "Or": "أو",
   "Or create a new one": "أو إنشاء واحدة جديدة",
   "Or filter by type": "أو التصفية حسب النوع",
   "Origin Is Unreachable": "لا يمكن الوصول إلى المنشأ",
@@ -993,8 +994,10 @@
   "significant other": "هامة أخرى",
   "Sign In": "تسجيل الدخول",
   "Sign in to your account": "تسجيل الدخول إلى حسابك",
+  "Sign in with a passkey": "تسجيل الدخول مع مفتاح المرور",
   "Sign up for an account": "التسجيل للحصول على حساب",
   "Sikh": "السيخ",
+  "Simply connect with:": "ببساطة التواصل مع:",
   "Slept :count hour|Slept :count hours": "ينام :count ساعة|نمت :count ساعة|نمت :count ساعة|نمت :count ساعات|نمت :count ساعة",
   "Slice of life": "شريحة من الحياة",
   "Slices of life": "شرائح من الحياة",
