--- a/lang/bn.json
+++ b/lang/bn.json
@@ -659,8 +659,8 @@
   "Log In": "লগইন",
   "Login": "লগইন",
   "Login with:": "লগইন করুন:",
-  "Logout": "লগ-আউট",
   "Log Out": "লগ-আউট",
+  "Logout": "লগ-আউট",
   "Log Out Other Browser Sessions": "অন্য ব্রাউজার সেশনে লগ আউট করুন",
   "Longest streak": "দীর্ঘতম ধারা",
   "Loop Detected": "লুপ সনাক্ত করা হয়েছে",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "খোলা রাস্তার মানচিত্র একটি দুর্দান্ত গোপনীয়তার বিকল্প, তবে কম বিবরণ দেয়।",
   "Open Telegram to validate your identity": "আপনার পরিচয় যাচাই করতে টেলিগ্রাম খুলুন",
   "optional": "ঐচ্ছিক",
+  "Or": "বা",
   "Or create a new one": "অথবা একটি নতুন তৈরি করুন",
   "Or filter by type": "অথবা প্রকার অনুসারে ফিল্টার করুন",
   "Origin Is Unreachable": "অরিজিন ইজ অরিচেবল",
@@ -993,8 +994,10 @@
   "significant other": "উল্লেখযোগ্য অন্যান্য",
   "Sign In": "সাইন ইন করুন",
   "Sign in to your account": "আপনার অ্যাকাউন্টে সাইন ইন করুন",
+  "Sign in with a passkey": "একটি পাসকি দিয়ে সাইন ইন করুন",
   "Sign up for an account": "অ্যাকাউন্ট খুলুন",
   "Sikh": "শিখ",
+  "Simply connect with:": "কেবল সাথে সংযোগ স্থাপন করুন:",
   "Slept :count hour|Slept :count hours": ":count ঘণ্টা ঘুমিয়েছেন|:count ঘন্টা ঘুমিয়েছে",
   "Slice of life": "এক খন্ড জীবন",
   "Slices of life": "জীবনের টুকরো টুকরো",
