--- a/lang/ca.json
+++ b/lang/ca.json
@@ -659,8 +659,8 @@
   "Log In": "Entrar",
   "Login": "Entrar",
   "Login with:": "Accedir amb:",
-  "Logout": "Sortir",
   "Log Out": "Sortir",
+  "Logout": "Sortir",
   "Log Out Other Browser Sessions": "Tanca la sessió d’altres navegadors",
   "Longest streak": "Ratxa més llarga",
   "Loop Detected": "Bucle detectat",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps és una gran alternativa de privadesa, però ofereix menys detalls.",
   "Open Telegram to validate your identity": "Obriu Telegram per validar la vostra identitat",
   "optional": "opcional",
+  "Or": "O",
   "Or create a new one": "O crear-ne un de nou",
   "Or filter by type": "O filtra per tipus",
   "Origin Is Unreachable": "L’origen és inabastable",
@@ -993,8 +994,10 @@
   "significant other": "un altre significatiu",
   "Sign In": "Inicieu la sessió",
   "Sign in to your account": "Inicieu la sessió al vostre compte",
+  "Sign in with a passkey": "Inicieu la sessió amb una tecla de pas",
   "Sign up for an account": "Registreu-vos per obtenir un compte",
   "Sikh": "Sikh",
+  "Simply connect with:": "Simplement connecteu -vos amb:",
   "Slept :count hour|Slept :count hours": "Ha dormit :count hora|He dormit :count hores",
   "Slice of life": "Troç de vida",
   "Slices of life": "Trossets de vida",
