--- a/lang/da.json
+++ b/lang/da.json
@@ -659,8 +659,8 @@
   "Log In": "Log ind",
   "Login": "Log ind",
   "Login with:": "Login med:",
-  "Logout": "Log ud",
   "Log Out": "Log ud",
+  "Logout": "Log ud",
   "Log Out Other Browser Sessions": "Log ud af andre browsersessioner",
   "Longest streak": "Længste streak",
   "Loop Detected": "Løkke registreret",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps er et fantastisk privatlivsalternativ, men tilbyder færre detaljer.",
   "Open Telegram to validate your identity": "Åbn Telegram for at validere din identitet",
   "optional": "valgfri",
+  "Or": "Eller",
   "Or create a new one": "Eller opret en ny",
   "Or filter by type": "Eller filtrer efter type",
   "Origin Is Unreachable": "Oprindelse er uopnåelig",
@@ -993,8 +994,10 @@
   "significant other": "væsentlig anden",
   "Sign In": "Log ind",
   "Sign in to your account": "Log ind på din konto",
+  "Sign in with a passkey": "Log ind med en paskey",
   "Sign up for an account": "Tilmeld dig en konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Forbind blot med:",
   "Slept :count hour|Slept :count hours": "Sov :count time|Sov :count timer",
   "Slice of life": "Et stykke af livet",
   "Slices of life": "Skiver af liv",
