--- a/lang/de.json
+++ b/lang/de.json
@@ -659,8 +659,8 @@
   "Log In": "Einloggen",
   "Login": "Anmelden",
   "Login with:": "Einloggen mit:",
-  "Logout": "Abmelden",
   "Log Out": "Abmelden",
+  "Logout": "Abmelden",
   "Log Out Other Browser Sessions": "Andere Browser-Sitzungen abmelden",
   "Longest streak": "Längste Strähne",
   "Loop Detected": "Endlosschleife erkannt",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps ist eine großartige Datenschutzalternative, bietet jedoch weniger Details.",
   "Open Telegram to validate your identity": "Öffnen Sie Telegram, um Ihre Identität zu bestätigen",
   "optional": "Optional",
+  "Or": "Oder",
   "Or create a new one": "Oder erstellen Sie ein neues",
   "Or filter by type": "Oder nach Typ filtern",
   "Origin Is Unreachable": "Quelle ist nicht erreichbar",
@@ -993,8 +994,10 @@
   "significant other": "bessere Hälfte",
   "Sign In": "Anmelden",
   "Sign in to your account": "Melden Sie sich bei Ihrem Konto an",
+  "Sign in with a passkey": "Melden Sie sich mit einem Passkey an",
   "Sign up for an account": "Für einen Account anmelden",
   "Sikh": "Sikh",
+  "Simply connect with:": "Einfach verbinden mit:",
   "Slept :count hour|Slept :count hours": ":count Stunde geschlafen|:count Stunden geschlafen",
   "Slice of life": "Stück des Lebens",
   "Slices of life": "Stücke des Lebens",
