--- a/lang/el.json
+++ b/lang/el.json
@@ -659,8 +659,8 @@
   "Log In": "Σύνδεση",
   "Login": "Είσοδος",
   "Login with:": "Συνδέσου με:",
-  "Logout": "Έξοδος",
   "Log Out": "Αποσύνδεση",
+  "Logout": "Έξοδος",
   "Log Out Other Browser Sessions": "Αποσυνδεθείτε Από Άλλες Συνεδρίες Του Προγράμματος Περιήγησης",
   "Longest streak": "Το μεγαλύτερο σερί",
   "Loop Detected": "Εντοπίστηκε βρόχος",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Οι Open Street Maps είναι μια εξαιρετική εναλλακτική λύση απορρήτου, αλλά προσφέρουν λιγότερες λεπτομέρειες.",
   "Open Telegram to validate your identity": "Ανοίξτε το Telegram για να επικυρώσετε την ταυτότητά σας",
   "optional": "προαιρετικός",
+  "Or": "Ή",
   "Or create a new one": "Ή δημιουργήστε ένα νέο",
   "Or filter by type": "Ή φιλτράρετε ανά τύπο",
   "Origin Is Unreachable": "Η προέλευση είναι απρόσιτη",
@@ -993,8 +994,10 @@
   "significant other": "ΣΥΝΤΡΟΦΟΣ",
   "Sign In": "Σύνδεση",
   "Sign in to your account": "Συνδεθείτε στο λογαριασμό σας",
+  "Sign in with a passkey": "Συνδεθείτε με ένα πέρασμα",
   "Sign up for an account": "Εγγραφείτε για λογαριασμό",
   "Sikh": "Σιχ",
+  "Simply connect with:": "Απλά συνδεθείτε με:",
   "Slept :count hour|Slept :count hours": "Κοιμήθηκε :count ώρα|Κοιμήθηκε :count ώρες",
   "Slice of life": "Κομμάτι της ζωής",
   "Slices of life": "Φέτες ζωής",
