--- a/lang/es.json
+++ b/lang/es.json
@@ -659,8 +659,8 @@
   "Log In": "Iniciar sesión",
   "Login": "Iniciar sesión",
   "Login with:": "Inicia con:",
-  "Logout": "Finalizar sesión",
   "Log Out": "Finalizar sesión",
+  "Logout": "Finalizar sesión",
   "Log Out Other Browser Sessions": "Cerrar las demás sesiones",
   "Longest streak": "Racha más larga",
   "Loop Detected": "Bucle detectado",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps es una excelente alternativa de privacidad, pero ofrece menos detalles.",
   "Open Telegram to validate your identity": "Abre Telegram para validar tu identidad",
   "optional": "opcional",
+  "Or": "O",
   "Or create a new one": "O crear uno nuevo",
   "Or filter by type": "O filtrar por tipo",
   "Origin Is Unreachable": "El origen es inalcanzable",
@@ -993,8 +994,10 @@
   "significant other": "pareja",
   "Sign In": "Iniciar sesión",
   "Sign in to your account": "Iniciar sesión en su cuenta",
+  "Sign in with a passkey": "Iniciar sesión con una llave de passación",
   "Sign up for an account": "Regístrese para obtener una cuenta",
   "Sikh": "sij",
+  "Simply connect with:": "Simplemente conéctese con:",
   "Slept :count hour|Slept :count hours": "Dormí :count hora|Dormí :count horas",
   "Slice of life": "Rebanada de vida",
   "Slices of life": "Rebanadas de vida",
