--- a/lang/fr.json
+++ b/lang/fr.json
@@ -659,8 +659,8 @@
   "Log In": "Se connecter",
   "Login": "Connexion",
   "Login with:": "Se connecter avec :",
-  "Logout": "Déconnexion",
   "Log Out": "Se déconnecter",
+  "Logout": "Déconnexion",
   "Log Out Other Browser Sessions": "Déconnecter les sessions ouvertes sur d’autres navigateurs",
   "Longest streak": "La plus longue série",
   "Loop Detected": "Boucle détectée",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps est une excellente alternative en matière de confidentialité, mais offre moins de détails.",
   "Open Telegram to validate your identity": "Ouvrez Telegram pour valider votre identité",
   "optional": "facultatif",
+  "Or": "Ou",
   "Or create a new one": "Ou créez-en un nouveau",
   "Or filter by type": "Ou filtrer par type",
   "Origin Is Unreachable": "L’origine est inaccessible",
@@ -993,8 +994,10 @@
   "significant other": "moitié",
   "Sign In": "Se connecter",
   "Sign in to your account": "Connectez-vous à votre compte",
+  "Sign in with a passkey": "Connectez-vous avec une clé de sécurité",
   "Sign up for an account": "Créer un compte",
   "Sikh": "Sikh",
+  "Simply connect with:": "Connectez-vous simplement avec :",
   "Slept :count hour|Slept :count hours": "A dormi :count heure|A dormi :count heures",
   "Slice of life": "Tranche de vie",
   "Slices of life": "Tranches de vie",
