--- a/lang/he.json
+++ b/lang/he.json
@@ -659,8 +659,8 @@
   "Log In": "התחברות",
   "Login": "התחברות",
   "Login with:": "התחבר עם:",
-  "Logout": "התנתקות",
   "Log Out": "התנתק",
+  "Logout": "התנתקות",
   "Log Out Other Browser Sessions": "להתנתק הפעלות דפדפן אחרות",
   "Longest streak": "הרצף הארוך ביותר",
   "Loop Detected": "זוהתה לולאה",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps היא אלטרנטיבה מצוינת לפרטיות, אך מציעה פחות פרטים.",
   "Open Telegram to validate your identity": "פתח את Telegram כדי לאמת את זהותך",
   "optional": "אופציונאלי",
+  "Or": "אוֹ",
   "Or create a new one": "או ליצור אחד חדש",
   "Or filter by type": "או לסנן לפי סוג",
   "Origin Is Unreachable": "לא ניתן להגיע למקור",
@@ -993,8 +994,10 @@
   "significant other": "אחר משמעותי",
   "Sign In": "להתחבר",
   "Sign in to your account": "תתחבר לחשבון שלך",
+  "Sign in with a passkey": "היכנס עם פסקי",
   "Sign up for an account": "תירשם בשביל חשבון",
   "Sikh": "סיקי",
+  "Simply connect with:": "פשוט התחבר ל:",
   "Slept :count hour|Slept :count hours": "ישן :count שעה|ישן :count שעות",
   "Slice of life": "פרוסת חיים",
   "Slices of life": "פרוסות חיים",
