--- a/lang/hi.json
+++ b/lang/hi.json
@@ -659,8 +659,8 @@
   "Log In": "लॉग इन करें",
   "Login": "लॉगिन करें",
   "Login with:": "साथ प्रवेश करना:",
-  "Logout": "लॉगआउट",
   "Log Out": "लॉग आउट करें",
+  "Logout": "लॉगआउट",
   "Log Out Other Browser Sessions": "अन्य ब्राउज़र सत्र लॉग आउट करें",
   "Longest streak": "सबसे लंबी लकीर",
   "Loop Detected": "लूप का पता चला",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "ओपन स्ट्रीट मैप्स एक बेहतरीन गोपनीयता विकल्प है, लेकिन कम विवरण प्रदान करता है।",
   "Open Telegram to validate your identity": "अपनी पहचान सत्यापित करने के लिए टेलीग्राम खोलें",
   "optional": "वैकल्पिक",
+  "Or": "या",
   "Or create a new one": "या एक नया बनाएं",
   "Or filter by type": "या प्रकार के अनुसार फ़िल्टर करें",
   "Origin Is Unreachable": "उत्पत्ति अगम्य है",
@@ -993,8 +994,10 @@
   "significant other": "अन्य महत्वपूर्ण",
   "Sign In": "दाखिल करना",
   "Sign in to your account": "अपने अकाउंट में साइन इन करें",
+  "Sign in with a passkey": "एक पासकी के साथ साइन इन करें",
   "Sign up for an account": "एक खाते के लिए साइन अप करें",
   "Sikh": "सिख",
+  "Simply connect with:": "बस के साथ कनेक्ट करें:",
   "Slept :count hour|Slept :count hours": ":count घंटा सोया|:count घंटे सोया",
   "Slice of life": "जीवन का हिस्सा",
   "Slices of life": "जीवन के टुकड़े",
