--- a/lang/it.json
+++ b/lang/it.json
@@ -659,8 +659,8 @@
   "Log In": "Accedi",
   "Login": "Accedi",
   "Login with:": "Entra con:",
-  "Logout": "Esci",
   "Log Out": "Esci",
+  "Logout": "Esci",
   "Log Out Other Browser Sessions": "Esci da altre sessioni del Browser",
   "Longest streak": "Serie più lunga",
   "Loop Detected": "Loop identificato",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps è un’ottima alternativa alla privacy, ma offre meno dettagli.",
   "Open Telegram to validate your identity": "Apri Telegram per convalidare la tua identità",
   "optional": "opzionale",
+  "Or": "O",
   "Or create a new one": "Oppure creane uno nuovo",
   "Or filter by type": "Oppure filtra per tipologia",
   "Origin Is Unreachable": "Origine non raggiungibile",
@@ -993,8 +994,10 @@
   "significant other": "partner",
   "Sign In": "Accedi",
   "Sign in to your account": "Accedi al tuo account",
+  "Sign in with a passkey": "Accedi con un passkey",
   "Sign up for an account": "Registrati per un account",
   "Sikh": "Sikh",
+  "Simply connect with:": "Semplicemente connettersi con:",
   "Slept :count hour|Slept :count hours": "Ho dormito :count ora|Ho dormito :count ore",
   "Slice of life": "Spaccato di vita",
   "Slices of life": "Spaccati di vita",
