--- a/lang/ja.json
+++ b/lang/ja.json
@@ -659,8 +659,8 @@
   "Log In": "ログイン",
   "Login": "ログイン",
   "Login with:": "でログイン：",
-  "Logout": "ログアウト",
   "Log Out": "ログアウト",
+  "Logout": "ログアウト",
   "Log Out Other Browser Sessions": "全ての端末からログアウト",
   "Longest streak": "最長連続記録",
   "Loop Detected": "ループを検出",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps はプライバシーを保護する優れた代替手段ですが、詳細情報はあまり提供されません。",
   "Open Telegram to validate your identity": "Telegramを開いて身元を確認してください",
   "optional": "オプション",
+  "Or": "または",
   "Or create a new one": "または、新しいものを作成する",
   "Or filter by type": "またはタイプでフィルタリングします",
   "Origin Is Unreachable": "オリジンに到達できません",
@@ -993,8 +994,10 @@
   "significant other": "伴侶",
   "Sign In": "サインイン",
   "Sign in to your account": "アカウントにサインインする",
+  "Sign in with a passkey": "PassKeyでサインインします",
   "Sign up for an account": "アカウントにサインアップする",
   "Sikh": "シーク教",
+  "Simply connect with:": "単に接続するだけです：",
   "Slept :count hour|Slept :count hours": "睡眠時間:count時間",
   "Slice of life": "人生のひとこま",
   "Slices of life": "人生の断片",
