--- a/lang/ml.json
+++ b/lang/ml.json
@@ -659,8 +659,8 @@
   "Log In": "ലോഗിൻ",
   "Login": "ലോഗിൻ",
   "Login with:": "ഇതുപയോഗിച്ച് ലോഗിൻ ചെയ്യുക:",
-  "Logout": "പുറത്തുകടക്കുക",
   "Log Out": "ലോഗ് ഔട്ട് ചെയ്യുക",
+  "Logout": "പുറത്തുകടക്കുക",
   "Log Out Other Browser Sessions": "മറ്റ് ബ്രൗസർ സെഷനുകൾ ലോഗ് ഔട്ട് ചെയ്യുക",
   "Longest streak": "ഏറ്റവും ദൈർഘ്യമേറിയ സ്ട്രീക്ക്",
   "Loop Detected": "ലൂപ്പ് കണ്ടെത്തി",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "ഓപ്പൺ സ്ട്രീറ്റ് മാപ്‌സ് ഒരു മികച്ച സ്വകാര്യത ബദലാണ്, എന്നാൽ കുറച്ച് വിശദാംശങ്ങൾ വാഗ്ദാനം ചെയ്യുന്നു.",
   "Open Telegram to validate your identity": "നിങ്ങളുടെ ഐഡന്റിറ്റി സാധൂകരിക്കാൻ ടെലിഗ്രാം തുറക്കുക",
   "optional": "ഓപ്ഷണൽ",
+  "Or": "അഥവാ",
   "Or create a new one": "അല്ലെങ്കിൽ പുതിയൊരെണ്ണം സൃഷ്ടിക്കുക",
   "Or filter by type": "അല്ലെങ്കിൽ തരം അനുസരിച്ച് ഫിൽട്ടർ ചെയ്യുക",
   "Origin Is Unreachable": "ഉത്ഭവം ലഭ്യമല്ല",
@@ -993,8 +994,10 @@
   "significant other": "സ്വാധീനിക്കുന്ന വ്യക്തിയോ പങ്കാളിയോ",
   "Sign In": "സൈൻ ഇൻ",
   "Sign in to your account": "നിങ്ങളുടെ അക്കൗണ്ടിലേക്ക് സൈൻ ഇൻ ചെയ്യുക",
+  "Sign in with a passkey": "ഒരു പാസ്കീ ഉപയോഗിച്ച് പ്രവേശിക്കുക",
   "Sign up for an account": "ഒരു അക്കൗണ്ടിനായി സൈൻ അപ്പ് ചെയ്യുക",
   "Sikh": "സിഖ്",
+  "Simply connect with:": "ഇതുമായി ബന്ധപ്പെടുക:",
   "Slept :count hour|Slept :count hours": ":count മണിക്കൂർ ഉറങ്ങി|:count മണിക്കൂർ ഉറങ്ങി",
   "Slice of life": "ജീവിതത്തിന്റെ കഷ്ണം",
   "Slices of life": "ജീവിതത്തിന്റെ കഷ്ണങ്ങൾ",
