--- a/lang/nl.json
+++ b/lang/nl.json
@@ -659,8 +659,8 @@
   "Log In": "Inloggen",
   "Login": "Inloggen",
   "Login with:": "Login met:",
-  "Logout": "Uitloggen",
   "Log Out": "Uitloggen",
+  "Logout": "Uitloggen",
   "Log Out Other Browser Sessions": "Uitloggen bij alle sessies",
   "Longest streak": "Langste reeks",
   "Loop Detected": "Loop gedetecteerd",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps is een geweldig privacyalternatief, maar biedt minder details.",
   "Open Telegram to validate your identity": "Open Telegram om uw identiteit te valideren",
   "optional": "optioneel",
+  "Or": "Of",
   "Or create a new one": "Of maak een nieuwe aan",
   "Or filter by type": "Of filter op type",
   "Origin Is Unreachable": "Herkomst is onbereikbaar",
@@ -993,8 +994,10 @@
   "significant other": "wederhelft",
   "Sign In": "Aanmelden",
   "Sign in to your account": "Log in op uw account",
+  "Sign in with a passkey": "Log in met een Passkey",
   "Sign up for an account": "Meld u aan voor een account",
   "Sikh": "Sikh",
+  "Simply connect with:": "Maak gewoon verbinding met:",
   "Slept :count hour|Slept :count hours": ":count uur geslapen|:count uur geslapen",
   "Slice of life": "Deel van het leven",
   "Slices of life": "Plakjes leven",
