--- a/lang/nn.json
+++ b/lang/nn.json
@@ -659,8 +659,8 @@
   "Log In": "Logg Inn",
   "Login": "Logg inn",
   "Login with:": "Logg inn med:",
-  "Logout": "Logg ut",
   "Log Out": "Logg ut",
+  "Logout": "Logg ut",
   "Log Out Other Browser Sessions": "Logg ut andre nettleserøkter",
   "Longest streak": "Lengste rekke",
   "Loop Detected": "Løkke oppdaget",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps er et flott alternativ for personvern, men tilbyr mindre detaljer.",
   "Open Telegram to validate your identity": "Åpne Telegram for å bekrefte identiteten din",
   "optional": "valgfri",
+  "Or": "Eller",
   "Or create a new one": "Eller lag en ny",
   "Or filter by type": "Eller filtrer etter type",
   "Origin Is Unreachable": "Opprinnelsen er uoppnåelig",
@@ -993,8 +994,10 @@
   "significant other": "bedre halvdel",
   "Sign In": "Logg inn",
   "Sign in to your account": "Logg på kontoen din",
+  "Sign in with a passkey": "Logg på med en passkey",
   "Sign up for an account": "Registrer deg for en konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Bare koble til:",
   "Slept :count hour|Slept :count hours": "Sov :count time|Sov :count timer",
   "Slice of life": "Bit av livet",
   "Slices of life": "Skiver av livet",
