--- a/lang/pa.json
+++ b/lang/pa.json
@@ -659,8 +659,8 @@
   "Log In": "ਲਾਗਿਨ",
   "Login": "ਲਾਗਿਨ",
   "Login with:": "ਇਸ ਨਾਲ ਲੌਗਇਨ ਕਰੋ:",
-  "Logout": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Log Out": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
+  "Logout": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Log Out Other Browser Sessions": "ਹੋਰ ਬਰਾਊਜ਼ਰ ਸੈਸ਼ਨ ਲੌਗ ਆਉਟ ਕਰੋ",
   "Longest streak": "ਸਭ ਤੋਂ ਲੰਬੀ ਲਕੀਰ",
   "Loop Detected": "ਲੂਪ ਖੋਜਿਆ ਗਿਆ",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "ਓਪਨ ਸਟ੍ਰੀਟ ਮੈਪਸ ਇੱਕ ਵਧੀਆ ਪਰਦੇਦਾਰੀ ਵਿਕਲਪ ਹੈ, ਪਰ ਘੱਟ ਵੇਰਵੇ ਪੇਸ਼ ਕਰਦਾ ਹੈ।",
   "Open Telegram to validate your identity": "ਆਪਣੀ ਪਛਾਣ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਟੈਲੀਗ੍ਰਾਮ ਖੋਲ੍ਹੋ",
   "optional": "ਵਿਕਲਪਿਕ",
+  "Or": "ਜਾਂ",
   "Or create a new one": "ਜਾਂ ਇੱਕ ਨਵਾਂ ਬਣਾਓ",
   "Or filter by type": "ਜਾਂ ਕਿਸਮ ਦੁਆਰਾ ਫਿਲਟਰ ਕਰੋ",
   "Origin Is Unreachable": "ਮੂਲ ਪਹੁੰਚ ਤੋਂ ਬਾਹਰ ਹੈ",
@@ -993,8 +994,10 @@
   "significant other": "ਮਹੱਤਵਪੂਰਨ ਹੋਰ",
   "Sign In": "ਸਾਈਨ - ਇਨ",
   "Sign in to your account": "ਆਪਣੇ ਖਾਤੇ ਵਿੱਚ ਸਾਈਨ ਇਨ ਕਰੋ",
+  "Sign in with a passkey": "ਇੱਕ ਪਾਸਕੀ ਨਾਲ ਸਾਈਨ ਇਨ ਕਰੋ",
   "Sign up for an account": "ਇੱਕ ਖਾਤੇ ਲਈ ਸਾਈਨ ਅੱਪ ਕਰੋ",
   "Sikh": "ਸਿੱਖ",
+  "Simply connect with:": "ਬਸ ਨਾਲ ਜੁੜੋ:",
   "Slept :count hour|Slept :count hours": ":count ਘੰਟਾ ਸੁੱਤਾ|:count ਘੰਟੇ ਸੌਂ ਗਏ",
   "Slice of life": "ਜਿੰਦਗੀ ਦਾ ਹਿੱਸਾ",
   "Slices of life": "ਜੀਵਨ ਦੇ ਟੁਕੜੇ",
