--- a/lang/pl.json
+++ b/lang/pl.json
@@ -659,8 +659,8 @@
   "Log In": "Zaloguj się",
   "Login": "Logowanie",
   "Login with:": "Zaloguj się z:",
-  "Logout": "Wyloguj",
   "Log Out": "Wyloguj się",
+  "Logout": "Wyloguj",
   "Log Out Other Browser Sessions": "Wyloguj inne sesje przeglądarki",
   "Longest streak": "Najdłuższa passa",
   "Loop Detected": "Wykryto pętlę",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps to świetna alternatywa zapewniająca prywatność, ale oferująca mniej szczegółów.",
   "Open Telegram to validate your identity": "Otwórz Telegram, aby potwierdzić swoją tożsamość",
   "optional": "opcjonalny",
+  "Or": "Lub",
   "Or create a new one": "Lub utwórz nowy",
   "Or filter by type": "Lub filtruj według typu",
   "Origin Is Unreachable": "Serwer źródłowy jest nieosiągalny",
@@ -993,8 +994,10 @@
   "significant other": "znaczący inny",
   "Sign In": "Zalogować się",
   "Sign in to your account": "Zaloguj się",
+  "Sign in with a passkey": "Zaloguj się z Passkey",
   "Sign up for an account": "Zaloguj się na konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Po prostu połącz się z:",
   "Slept :count hour|Slept :count hours": "Spałem :count godzinę|Spałem :count godziny|Spałem :count godzin",
   "Slice of life": "Okruchy życia",
   "Slices of life": "Kawałki życia",
