--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -659,8 +659,8 @@
   "Log In": "Entrar",
   "Login": "Entrar",
   "Login with:": "Faça login com:",
-  "Logout": "Sair",
   "Log Out": "Sair",
+  "Logout": "Sair",
   "Log Out Other Browser Sessions": "Desligar Outras Sessões do Navegador",
   "Longest streak": "Sequência mais longa",
   "Loop Detected": "Loop Detectado",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps é uma ótima alternativa de privacidade, mas oferece menos detalhes.",
   "Open Telegram to validate your identity": "Abra o Telegram para validar sua identidade",
   "optional": "opcional",
+  "Or": "Ou",
   "Or create a new one": "Ou crie um novo",
   "Or filter by type": "Ou filtre por tipo",
   "Origin Is Unreachable": "Origem É Inacessível",
@@ -993,8 +994,10 @@
   "significant other": "outro significativo",
   "Sign In": "Entrar",
   "Sign in to your account": "Faça login em sua conta",
+  "Sign in with a passkey": "Faça login com uma pasta",
   "Sign up for an account": "Inscreva-se pra uma conta",
   "Sikh": "Sikh",
+  "Simply connect with:": "Basta conectar -se com:",
   "Slept :count hour|Slept :count hours": "Dormi :count hora|Dormi :count horas",
   "Slice of life": "Fatia de vida",
   "Slices of life": "Fatias de vida",
