--- a/lang/ro.json
+++ b/lang/ro.json
@@ -659,8 +659,8 @@
   "Log In": "Autentificare",
   "Login": "Autentificare",
   "Login with:": "Logheaza-te cu:",
-  "Logout": "Deautentificare",
   "Log Out": "Deconectează",
+  "Logout": "Deautentificare",
   "Log Out Other Browser Sessions": "Deconectați Alte Sesiuni De Browser",
   "Longest streak": "Cea mai lungă serie",
   "Loop Detected": "Bucla detectată",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps este o alternativă excelentă de confidențialitate, dar oferă mai puține detalii.",
   "Open Telegram to validate your identity": "Deschide Telegram pentru a-ți valida identitatea",
   "optional": "opțional",
+  "Or": "Sau",
   "Or create a new one": "Sau creați unul nou",
   "Or filter by type": "Sau filtrați după tip",
   "Origin Is Unreachable": "Originea este de neatins",
@@ -993,8 +994,10 @@
   "significant other": "partenerul de viaţă",
   "Sign In": "Conectează-te",
   "Sign in to your account": "Conectați-vă la contul dvs",
+  "Sign in with a passkey": "Conectați -vă cu un paskey",
   "Sign up for an account": "Înscrieți-vă pentru un cont",
   "Sikh": "Sikh",
+  "Simply connect with:": "Pur și simplu conectați -vă cu:",
   "Slept :count hour|Slept :count hours": "A dormit :count ora|Am dormit :count ore|A dormit :count de ore",
   "Slice of life": "O felie de viață",
   "Slices of life": "Bucuri de viață",
