--- a/lang/ru.json
+++ b/lang/ru.json
@@ -659,8 +659,8 @@
   "Log In": "Войти",
   "Login": "Войти",
   "Login with:": "Войдите с:",
-  "Logout": "Выйти",
   "Log Out": "Выйти",
+  "Logout": "Выйти",
   "Log Out Other Browser Sessions": "Завершить другие сессии",
   "Longest streak": "Самая длинная серия",
   "Loop Detected": "Обнаружен бесконечный цикл",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps — отличная альтернатива конфиденциальности, но предлагает меньше деталей.",
   "Open Telegram to validate your identity": "Откройте Telegram, чтобы подтвердить свою личность.",
   "optional": "необязательный",
+  "Or": "Или",
   "Or create a new one": "Или создайте новый",
   "Or filter by type": "Или отфильтровать по типу",
   "Origin Is Unreachable": "Источник недоступен",
@@ -993,8 +994,10 @@
   "significant other": "вторая половинка",
   "Sign In": "Регистрация",
   "Sign in to your account": "Войдите в свой аккаунт",
+  "Sign in with a passkey": "Войдите с пассажиром",
   "Sign up for an account": "Зарегистрируйте аккаунт",
   "Sikh": "сикх",
+  "Simply connect with:": "Просто свяжитесь с:",
   "Slept :count hour|Slept :count hours": "Спал :count час|Спал :count часа|Спал :count часов",
   "Slice of life": "Кусочек жизни",
   "Slices of life": "Кусочки жизни",
