--- a/lang/sv.json
+++ b/lang/sv.json
@@ -659,8 +659,8 @@
   "Log In": "Logga in",
   "Login": "Logga in",
   "Login with:": "Logga in med:",
-  "Logout": "Logga ut",
   "Log Out": "utloggning",
+  "Logout": "Logga ut",
   "Log Out Other Browser Sessions": "Logga Ut Andra Webbläsarsessioner",
   "Longest streak": "Längsta rad",
   "Loop Detected": "Slinga upptäckt",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps är ett bra sekretessalternativ, men erbjuder mindre detaljer.",
   "Open Telegram to validate your identity": "Öppna Telegram för att validera din identitet",
   "optional": "frivillig",
+  "Or": "Eller",
   "Or create a new one": "Eller skapa en ny",
   "Or filter by type": "Eller filtrera efter typ",
   "Origin Is Unreachable": "Ursprunget går inte att nå",
@@ -993,8 +994,10 @@
   "significant other": "betydande annan",
   "Sign In": "Logga in",
   "Sign in to your account": "logga in på ditt konto",
+  "Sign in with a passkey": "Logga in med en passnyckel",
   "Sign up for an account": "Registrera dig för ett konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Anslut bara till:",
   "Slept :count hour|Slept :count hours": "Sov :count timme|Sov :count timmar",
   "Slice of life": "Bit av livet",
   "Slices of life": "Skivor av livet",
