--- a/lang/te.json
+++ b/lang/te.json
@@ -659,8 +659,8 @@
   "Log In": "ప్రవేశించండి",
   "Login": "ప్రవేశించండి",
   "Login with:": "తో లాగిన్ అవ్వండి:",
-  "Logout": "లాగ్అవుట్",
   "Log Out": "లాగ్ అవుట్ చేయండి",
+  "Logout": "లాగ్అవుట్",
   "Log Out Other Browser Sessions": "ఇతర బ్రౌజర్ సెషన్‌లను లాగ్ అవుట్ చేయండి",
   "Longest streak": "పొడవైన గీత",
   "Loop Detected": "లూప్ కనుగొనబడింది",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "ఓపెన్ స్ట్రీట్ మ్యాప్స్ గొప్ప గోప్యతా ప్రత్యామ్నాయం, కానీ తక్కువ వివరాలను అందిస్తుంది.",
   "Open Telegram to validate your identity": "మీ గుర్తింపును ధృవీకరించడానికి టెలిగ్రామ్‌ని తెరవండి",
   "optional": "ఐచ్ఛికం",
+  "Or": "లేదా",
   "Or create a new one": "లేదా కొత్తదాన్ని సృష్టించండి",
   "Or filter by type": "లేదా రకం ద్వారా ఫిల్టర్ చేయండి",
   "Origin Is Unreachable": "మూలం చేరుకోలేకపోయింది",
@@ -993,8 +994,10 @@
   "significant other": "ముఖ్యమైన ఇతర",
   "Sign In": "సైన్ ఇన్ చేయండి",
   "Sign in to your account": "మీ ఖాతాకు సైన్ ఇన్ చేయండి",
+  "Sign in with a passkey": "పాస్కీతో సైన్ ఇన్ చేయండి",
   "Sign up for an account": "ఖాతా కోసం సైన్ అప్ చేయండి",
   "Sikh": "సిక్కు",
+  "Simply connect with:": "దీనితో కనెక్ట్ అవ్వండి:",
   "Slept :count hour|Slept :count hours": ":count గంట పడుకున్నారు|:count గంటలు నిద్రపోయారు",
   "Slice of life": "జీవితపు ముక్క",
   "Slices of life": "జీవితం యొక్క ముక్కలు",
