--- a/lang/tr.json
+++ b/lang/tr.json
@@ -659,8 +659,8 @@
   "Log In": "Giriş Yap",
   "Login": "Giriş Yap",
   "Login with:": "İle giriş:",
-  "Logout": "Çıkış Yap",
   "Log Out": "Çıkış Yap",
+  "Logout": "Çıkış Yap",
   "Log Out Other Browser Sessions": "Diğer Tarayıcılardaki Oturumları Sonlandır",
   "Longest streak": "En uzun seri",
   "Loop Detected": "Döngü Tespit Edildi",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Açık Sokak Haritaları harika bir gizlilik alternatifidir ancak daha az ayrıntı sunar.",
   "Open Telegram to validate your identity": "Kimliğinizi doğrulamak için Telegram’ı açın",
   "optional": "isteğe bağlı",
+  "Or": "Veya",
   "Or create a new one": "Veya yeni bir tane oluşturun",
   "Or filter by type": "Veya türe göre filtreleyin",
   "Origin Is Unreachable": "Kökeni Ulaşılamaz",
@@ -993,8 +994,10 @@
   "significant other": "hayat arkadaşı",
   "Sign In": "Kayıt olmak",
   "Sign in to your account": "hesabınıza giriş yapın",
+  "Sign in with a passkey": "Bir passey ile oturum açın",
   "Sign up for an account": "Bir hesap için kaydolun",
   "Sikh": "Sih",
+  "Simply connect with:": "Basitçe bağlanın:",
   "Slept :count hour|Slept :count hours": ":count saat uyudum",
   "Slice of life": "Hayattan bir parça",
   "Slices of life": "Hayatın dilimleri",
