--- a/lang/ur.json
+++ b/lang/ur.json
@@ -659,8 +659,8 @@
   "Log In": "لاگ ان کریں",
   "Login": "لاگ ان کریں",
   "Login with:": "کے ساتھ لاگ ان:",
-  "Logout": "لاگ آوٹ",
   "Log Out": "باہر لاگ ان کریں",
+  "Logout": "لاگ آوٹ",
   "Log Out Other Browser Sessions": "لاگ آؤٹ دیگر براؤزر سیشن",
   "Longest streak": "سب سے طویل سلسلہ",
   "Loop Detected": "لوپ کا پتہ چلا",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps رازداری کا ایک بہترین متبادل ہے، لیکن کم تفصیلات پیش کرتا ہے۔",
   "Open Telegram to validate your identity": "اپنی شناخت کی تصدیق کے لیے ٹیلیگرام کھولیں۔",
   "optional": "اختیاری",
+  "Or": "یا",
   "Or create a new one": "یا ایک نیا بنائیں",
   "Or filter by type": "یا قسم کے لحاظ سے فلٹر کریں۔",
   "Origin Is Unreachable": "اصل ناقابل رسائی ہے۔",
@@ -993,8 +994,10 @@
   "significant other": "اہم دوسرے",
   "Sign In": "سائن ان",
   "Sign in to your account": "اپنے اکاؤنٹ میں سائن ان کریں۔",
+  "Sign in with a passkey": "پاسکی کے ساتھ سائن ان کریں",
   "Sign up for an account": "ایک اکاؤنٹ کے لیے سائن اپ کریں۔",
   "Sikh": "سکھ",
+  "Simply connect with:": "بس کے ساتھ مربوط ہوں:",
   "Slept :count hour|Slept :count hours": ":count گھنٹہ سویا۔|:count گھنٹے سوئے۔",
   "Slice of life": "زندگی کا ٹکڑا",
   "Slices of life": "زندگی کے ٹکڑے",
