--- a/lang/vi.json
+++ b/lang/vi.json
@@ -659,8 +659,8 @@
   "Log In": "Đăng Nhập",
   "Login": "Đăng nhập",
   "Login with:": "Đăng nhập với:",
-  "Logout": "Đăng xuất",
   "Log Out": "Đăng Xuất",
+  "Logout": "Đăng xuất",
   "Log Out Other Browser Sessions": "Đăng Xuất Khỏi Các Phiên Trình Duyệt Khác",
   "Longest streak": "Chuỗi dài nhất",
   "Loop Detected": "Phát Hiện Lặp",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps là một lựa chọn thay thế tuyệt vời về quyền riêng tư nhưng cung cấp ít chi tiết hơn.",
   "Open Telegram to validate your identity": "Mở Telegram để xác thực danh tính của bạn",
   "optional": "không bắt buộc",
+  "Or": "Hoặc",
   "Or create a new one": "Hoặc tạo một cái mới",
   "Or filter by type": "Hoặc lọc theo loại",
   "Origin Is Unreachable": "Nguồn Gốc Không Chấp Nhận",
@@ -993,8 +994,10 @@
   "significant other": "ý nghĩa khác",
   "Sign In": "Đăng nhập",
   "Sign in to your account": "đăng nhập vào tài khoản của bạn",
+  "Sign in with a passkey": "Đăng nhập bằng túi mật",
   "Sign up for an account": "Đăng kí một tài khoản",
   "Sikh": "đạo Sikh",
+  "Simply connect with:": "Đơn giản chỉ cần kết nối với:",
   "Slept :count hour|Slept :count hours": "Ngủ :count tiếng",
   "Slice of life": "Khia cạnh cuộc sống",
   "Slices of life": "Những lát cắt cuộc sống",
