--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -659,8 +659,8 @@
   "Log In": "登录",
   "Login": "登录",
   "Login with:": "登录方式：",
-  "Logout": "登出",
   "Log Out": "登出",
+  "Logout": "登出",
   "Log Out Other Browser Sessions": "注销其他浏览器的会话",
   "Longest streak": "最长连续纪录",
   "Loop Detected": "检测到环路",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps 是一个很好的隐私替代方案，但提供的细节较少。",
   "Open Telegram to validate your identity": "打开 Telegram 验证您的身份",
   "optional": "选修的",
+  "Or": "或者",
   "Or create a new one": "或者创建一个新的",
   "Or filter by type": "或按类型过滤",
   "Origin Is Unreachable": "原点无法到达",
@@ -993,8 +994,10 @@
   "significant other": "重要的另一半",
   "Sign In": "登入",
   "Sign in to your account": "登录到您的帐户",
+  "Sign in with a passkey": "登录",
   "Sign up for an account": "注册新账号",
   "Sikh": "锡克教",
+  "Simply connect with:": "只需与：",
   "Slept :count hour|Slept :count hours": "睡了 :count 小时",
   "Slice of life": "生活的片段",
   "Slices of life": "生活片段",
