--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -659,8 +659,8 @@
   "Log In": "登入",
   "Login": "登入",
   "Login with:": "登入方式：",
-  "Logout": "登出",
   "Log Out": "登出",
+  "Logout": "登出",
   "Log Out Other Browser Sessions": "登出其它瀏覽器工作階段",
   "Longest streak": "最長連續紀錄",
   "Loop Detected": "檢測到環路",
@@ -786,6 +786,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps 是一個很好的隱私替代方案，但提供的細節較少。",
   "Open Telegram to validate your identity": "開啟 Telegram 驗證您的身份",
   "optional": "選修的",
+  "Or": "或者",
   "Or create a new one": "或創建一個新的",
   "Or filter by type": "或按類型過濾",
   "Origin Is Unreachable": "原點不可達",
@@ -993,8 +994,10 @@
   "significant other": "重要的另一半",
   "Sign In": "登入",
   "Sign in to your account": "登入您的帳戶",
+  "Sign in with a passkey": "登入",
   "Sign up for an account": "註冊新帳號",
   "Sikh": "錫克教",
+  "Simply connect with:": "只需與：",
   "Slept :count hour|Slept :count hours": "睡了 :count 小時",
   "Slice of life": "生活的片段",
   "Slices of life": "生活片段",
